fix: issue with form style on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ body {
 /* Buttons */
 
 button,
-.button    {
+.button {
     background-color: white;
     border-radius: 100px;
     padding: 15px 20px;
@@ -563,7 +563,7 @@ main {
 
 /* Styling for extra small screens */
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 350px) {
 
     .basic-section {
         padding: 50px 20px;
@@ -574,22 +574,44 @@ main {
     }
 
     .cta-content {
-    margin: 0px 20px;
-    padding: 40px 20px;
+        margin: 0px 20px;
+        padding: 40px 20px;
     }
 
     #header-notice p {
-    font-size: 11px;
+        font-size: 11px;
     }
 
     .intro-text {
         background-color: #FFF8E4;
         padding: 30px 20px 10px;
     }
-    
+
     .intro-text p {
         font-size: 0.9rem;
         line-height: 1.3rem;
+    }
+
+    form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    form input,
+    form textarea,
+    form select,
+    form date {
+        padding: 10px;
+        margin-bottom: 20px;
+        border: none;
+        font-size: 13px;
+    }
+
+    .form-content {
+        margin-top: 20px;
+        padding: 20px;
     }
 }
 
